--- a/citywitch.html
+++ b/citywitch.html
@@ -64,7 +64,7 @@
                         <img src="project/citywitch/endscene2.jpg" alt="end2" class="thumbnail" onclick="openPopup('project/citywitch/endscene2.jpg')">
                         <img src="project/citywitch/endscene3.jpg" alt="end3" class="thumbnail" onclick="openPopup('project/citywitch/endscene3.jpg')">
                         <img src="project/citywitch/finalscene.jpg" alt="fin" class="thumbnail" onclick="openPopup('project/citywitch/finalscene.jpg')">
-                        <img src="project/citywitch/ui.jpg" alt="ui" class="thumbnail" onclick="openPopup('project/citywitch/ui.jpg')">
+                        <img src="project/citywitch/ui.png" alt="ui" class="thumbnail" onclick="openPopup('project/citywitch/ui.png')">
                         <img src="project/citywitch/buttons.png" alt="buttons" class="thumbnail" onclick="openPopup('project/citywitch/buttons.png')">
                         <img src="project/citywitch/hatlogo.png" alt="hatlogo" class="thumbnail" onclick="openPopup('project/citywitch/hatlogo.png')">
                         <img src="project/citywitch/remigame.png" alt="remigame" class="thumbnail" onclick="openPopup('project/citywitch/remigame.png')">
@@ -133,7 +133,7 @@
             'project/citywitch/endscene2.jpg',
             'project/citywitch/endscene3.jpg',
             'project/citywitch/finalscene.jpg',
-            'project/citywitch/ui.jpg',
+            'project/citywitch/ui.png',
             'project/citywitch/buttons.png',
             'project/citywitch/hatlogo.png',
             'project/citywitch/remigame.png',
