--- a/brinkmanship.html
+++ b/brinkmanship.html
@@ -27,9 +27,9 @@
                         <div class="text-container">
                             <span style="font-weight: 300; font-size: 30px;">Brinkmanship 2024</span><br>
                             <hr>
-                            <button class="tag" style="background-color: #0889c9">Artist</button>
                             <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
-                            <button class="tag" style="background-color: #80cdf0">3D Animation</button><br>
+                            <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
+                            <button class="tag" style="background-color: #65c2eb">3D Animation</button><br>
                             <p>Brinkmanship is a first person sci-fi mystery about greed, manipulation,
                                  and trust. As a spaceborne colonist 20 years into your voyage you’ve 
                                  just discovered that your ship has secretly altered its heading. 
