--- a/projects.html
+++ b/projects.html
@@ -69,13 +69,51 @@
                 </div>
                 <br>
                 <div class="projectlist">
+                    <div class="proimage" onclick="">
+                        <img src="placeholder.jpg" alt="mythoflumi" class="codepic">
+                        <div class="overlay1">
+                            <div class="textc">
+                                <span style="font-weight: 300; font-size: 30px;">Myth of Lumi 2025</span><br>
+                                <hr>
+                                <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Animation</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
+                                <button class="tag" style="background-color: #0889c9">2D Art</button>
+                                <button class="tag" style="background-color: #0889c9">2D Animation</button><br>
+                                <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                    <li>Team size: 35~40</li>
+                                    <li>Create concept arts</li>
+                                    <li>Animation for lumi</li>
+                                    <li>Model, rig, and animate first-person arm</li>
+                                </ul><br>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="proimage" onclick="">
+                        <img src="placeholder.jpg" alt="thewingandthewisp" class="codepic">
+                        <div class="overlay1">
+                            <div class="textc">
+                                <span style="font-weight: 300; font-size: 24px;">The Wind and The Wisp 2025</span><br>
+                                <hr>
+                                <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Animation</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
+                                <button class="tag" style="background-color: #a5d19b">Coding</button><br>
+                                <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                    <li>Team size: 15~20</li>
+                                    <li>Importing animation to engine</li>
+                                    <li>Rigged and animate props</li>
+                                    <li>Helped team members with rigging and animation debugging</li>
+                                </ul><br>
+                            </div>
+                        </div>
+                    </div>
                     <div class="proimage" onclick="redirectToPigandchikin()">
                         <img src="project/pigandchikin/pccov.jpg" alt="pig&chikin" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
-                                <span style="font-weight: 300; font-size: 28px;">Pig & Chikin 2024</span><br>
+                                <span style="font-weight: 300; font-size: 30px;">Pig & Chikin 2024</span><br>
                                 <hr>
-                                <button class="tag" style="background-color: #0889c9">Artist</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Animation</button><br>
@@ -94,8 +132,8 @@
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 30px;">Shepherds 2024</span><br>
                                 <hr>
-                                <button class="tag" style="background-color: #0889c9">Artist</button>
-                                <button class="tag" style="background-color: #c8e2b8">UI Design</button><br>
+                                <button class="tag" style="background-color: #c8e2b8">UI Design</button>
+                                <button class="tag" style="background-color: #0889c9">2D Art</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 35~40</li>
                                     <li>Create fictional language</li>
@@ -111,7 +149,6 @@
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 28px;">Brinkmanship 2024</span><br>
                                 <hr>
-                                <button class="tag" style="background-color: #0889c9">Artist</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Animation</button><br>
