--- a/shepherds.html
+++ b/shepherds.html
@@ -27,8 +27,8 @@
                         <div class="text-container">
                             <span style="font-weight: 300; font-size: 30px;">Shepherds 2024</span><br>
                             <hr>
-                                <button class="tag" style="background-color: #0889c9">Artist</button>
-                                <button class="tag" style="background-color: #c8e2b8">UI Design</button><br>
+                                <button class="tag" style="background-color: #c8e2b8">UI Design</button>
+                                <button class="tag" style="background-color: #0889c9">2D Art</button><br>
                             <p>Shepherds is a 3D, two-player co-op musical adventure game in which 
                                 players control unlikely partners - a shepherd girl named Zoe and a 
                                 magic wolf named Kin. Players must cleverly combining their unique 
