--- a/codepros.html
+++ b/codepros.html
@@ -9,6 +9,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<style>
+    .overlay1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.8);
+        color: white;
+        display: flex;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+        font-size: 30px;
+        cursor: pointer;
+    }
+    
+    .textc {
+        font-size: 13px;
+        letter-spacing: 0.05em;
+        line-height: 1.5;
+        margin: 20px;
+    }
+</style>
+
 <body>
     <main>
         <section id="projectpage" class="page">
@@ -18,19 +42,23 @@
                     <h2>Code</h2>
                 </div>
                 <br>
-                <p style="font-size: 13px; color: gray; margin-bottom: 20px;">
-                    - Code can be provided upon request.
-                </p>
                 <div class="projectlist">
                     <div class="codeimage">
                         <a href="codes/portal/Lab12.html" target="_blank">
                             <img src="img_folder/code_img/portal.jpg" alt="portal" class="codepic">
                             <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Portal - 3D</span><br>
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Portal - 3D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
                                     <br>
-                                    - click to play -
-                                </p>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Implemented FPS player movement with mouse-controlled camera and strafing</li>
+                                        <li>Implemented turret AI for automated targeting and firing</li>
+                                        <li>Learned and applied quaternion calculations</li>
+                                        <li>Integrated 3D sound effects</li>
+                                    </ul><br>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -38,35 +66,18 @@
                         <a href="codes/mariocart/Lab08.html" target="_blank">
                             <img src="img_folder/code_img/mariocart.jpg" alt="mariocart" class="codepic">
                             <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Mario Cart - 3D</span><br>
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Mario Kart - 3D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
                                     <br>
-                                    - click to play -
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="codeimage">
-                        <a href="codes/mario/Lab04.html" target="_blank">
-                            <img src="img_folder/code_img/mario.jpg" alt="mario" class="codepic">
-                            <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Mario - 2D</span><br>
-                                    <br>
-                                    - click to play -
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="codeimage">
-                        <a href="codes/pacman/Lab05.html" target="_blank">
-                            <img src="img_folder/code_img/pacman.jpg" alt="pac-man" class="codepic">
-                            <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Pac-Man - 2D</span><br>
-                                    <br>
-                                    - click to play -
-                                </p>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Implemented linear drag to velocity</li>
+                                        <li>Developed a spring camera system to follow the player</li>
+                                        <li>Built a checkpoint system to track progress around the track</li>
+                                        <li>Implemented AI components for computer-controlled racers</li>
+                                    </ul><br>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -74,11 +85,18 @@
                         <a href="codes/starfox/Lab07.html" target="_blank">
                             <img src="img_folder/code_img/starfox.jpg" alt="star fox" class="codepic">
                             <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Star Fox Tunnel - 3D</span><br>
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 27px;">Star Fox Tunnel - 3D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
                                     <br>
-                                    - click to play -
-                                </p>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Learned to use Vector3 for setting up a 3D world and loading levels</li>
+                                        <li>Developed a follow camera system</li>
+                                        <li>Implemented a chain reaction effect for explosions</li>
+                                        <li>Created a UI to track damage</li>
+                                    </ul><br>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -86,11 +104,57 @@
                         <a href="codes/zelda/Lab06.html" target="_blank">
                             <img src="img_folder/code_img/zelda.jpg" alt="zelda" class="codepic">
                             <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Zelda - 2D</span><br>
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Zelda - 2D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
                                     <br>
-                                    - click to play -
-                                </p>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Applied tile mapping techniques</li>
+                                        <li>Used A* pathfinding for soldier AI</li>
+                                        <li>Added a damage counter system</li>
+                                        <li>Implemented weapons as separate entities from the player</li>
+                                    </ul><br>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/pacman/Lab05.html" target="_blank">
+                            <img src="img_folder/code_img/pacman.jpg" alt="pac-man" class="codepic">
+                            <div class="overlay">
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Pac-Man - 2D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                    <br>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Learned and applied a finite state machine</li>
+                                        <li>Implemented different AI behaviors for individual ghosts</li>
+                                        <li>Coded distinct actions for various states</li>
+                                    </ul><br>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="codeimage">
+                        <a href="codes/mario/Lab04.html" target="_blank">
+                            <img src="img_folder/code_img/mario.jpg" alt="mario" class="codepic">
+                            <div class="overlay">
+                                <div class="overlay">
+                                    <div class="textc">
+                                        <span style="font-weight: 300; font-size: 30px;">Mario - 2D</span><br>
+                                        <hr>
+                                        <button class="tag" style="background-color: #a5d19b">Coding</button>
+                                        <br>
+                                        <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                            <li>Implemented gravity and acceleration mechanics</li>
+                                            <li>Developed a scrolling camera system</li>
+                                            <li>Utilized sprite animations</li>
+                                            <li>Integrated sound effects and background music using SDL</li>
+                                        </ul><br>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -98,11 +162,18 @@
                         <a href="codes/frogger/Lab03.html" target="_blank">
                             <img src="img_folder/code_img/frogger.jpg" alt="frogger" class="codepic">
                             <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Frogger - 2D</span><br>
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Frogger - 2D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
                                     <br>
-                                    - click to play -
-                                </p>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Load levels by reading .txt files</li>
+                                        <li>Implemented leading edge key detection</li>
+                                        <li>Calculated intersections and collisions using minimum overlap</li>
+                                        <li>Front angle calculation</li>
+                                    </ul><br>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -110,11 +181,18 @@
                         <a href="codes/astroid/Lab02.html" target="_blank">
                             <img src="img_folder/code_img/astroid.jpg" alt="astroid" class="codepic">
                             <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Astroid - 2D</span><br>
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Astroid - 2D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
                                     <br>
-                                    - click to play -
-                                </p>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Implementing actors and components</li>
+                                        <li>Learned how to incorporate sprites</li>
+                                        <li>Coding and calculating rotation</li>
+                                        <li>Created functionality for screen wrapping</li>
+                                    </ul><br>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -122,11 +200,18 @@
                         <a href="codes/pong/Lab01.html" target="_blank">
                             <img src="img_folder/code_img/pong.jpg" alt="pong" class="codepic">
                             <div class="overlay">
-                                <p style="font-size: 16px; text-align: center;">
-                                    <span style="font-weight: bold; font-size: 20px;">Pong - 2D</span><br>
+                                <div class="textc">
+                                    <span style="font-weight: 300; font-size: 30px;">Pong - 2D</span><br>
+                                    <hr>
+                                    <button class="tag" style="background-color: #a5d19b">Coding</button>
                                     <br>
-                                    - click to play -
-                                </p>
+                                    <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                        <li>Learned drawing using SDL</li>
+                                        <li>Coding a basic game loop and system</li>
+                                        <li>Capping delta time</li>
+                                        <li>Coding for object movements</li>
+                                    </ul><br>
+                                </div>
                             </div>
                         </a>
                     </div>
