--- a/projects.html
+++ b/projects.html
@@ -170,6 +170,7 @@
                                 <button class="tag" style="background-color: #94bcd2">Director</button>
                                 <button class="tag" style="background-color: #0b5d85">Lead Artist</button>
                                 <button class="tag" style="background-color: #0889c9">2D Art</button>
+                                <button class="tag" style="background-color: #0889c9">2D Animation</button>
                                 <button class="tag" style="background-color: #5b9abc">Narrative</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 2</li>
