--- a/arts.html
+++ b/arts.html
@@ -41,7 +41,7 @@
                         <img src="img_folder/3Dart/itp351.jpg" alt="itp351" class="art">
                         <div class="overlay">
                             <p style="font-size: 16px; text-align: center;">
-                                <span style="font-weight: bold; font-size: 20px;">Character Model</span><br>
+                                <span style="font-weight: bold; font-size: 20px;">Low-poly Character Model</span><br>
                             </p>
                         </div>
                     </div>
