--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
                 </div>
                 <br>
                 <div class="projectlist">
-                    <div class="proimage" onclick="">
+                    <div class="proimage" onclick="redirectToThewindandthewisp()">
                         <img src="placeholder.jpg" alt="thewingandthewisp" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="proimage" onclick="">
+                    <div class="proimage" onclick="redirectToMythoflumi()">
                         <img src="placeholder.jpg" alt="mythoflumi" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
@@ -102,7 +102,8 @@
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 35~40</li>
                                     <li>Create concept arts</li>
-                                    <li>Animation for lumi</li>
+                                    <li>2D animation for lumi</li>
+                                    <li>Rig and animate all characters</li>
                                     <li>Model, rig, and animate first-person arm</li>
                                 </ul><br>
                             </div>
@@ -248,6 +249,14 @@
 
         function redirectToPigandchikin() {
             window.location.href = 'pigandchikin.html';
+        }
+
+        function redirectToMythoflumi() {
+            window.location.href = 'mythoflumi.html';
+        }
+
+        function redirectToThewindandthewisp() {
+            window.location.href = 'thewindandthewisp.html';
         }
     </script>
 
