--- a/thewindandthewisp.html
+++ b/thewindandthewisp.html
@@ -52,7 +52,7 @@
                         <img src="project/thewindandthewisp/zinnia.jpg" alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/zinnia.jpg')">
                         <img src="project/thewindandthewisp/zinnia.gif" alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/zinnia.gif')">
                         <img src="project/thewindandthewisp/lilyofthevalley.jpg" alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/lilyofthevalley.jpg')">
-                        <img src="project/thewindandthewisp/lilyofthevalley.gif alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/lilyofthevalley.gif')">
+                        <img src="project/thewindandthewisp/lilyofthevalley.gif" alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/lilyofthevalley.gif')">
                         <img src="project/thewindandthewisp/forgetmenot.jpg" alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/forgetmenot.jpg')">
                         <img src="project/thewindandthewisp/forgetmenot.gif" alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/forgetmenot.gif')">
                         <img src="project/thewindandthewisp/petunia.jpg" alt="pc" class="thumbnail" onclick="openPopup('project/thewindandthewisp/petunia.jpg')">
