--- a/codepros.html
+++ b/codepros.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dora Tsai's Portfolio Code</title>
+    <title>Dora Tsai's Portfolio</title>
     <link rel="icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -223,7 +223,7 @@
 
     <footer>
         <div style="display: flex;">
-            <h2 style="text-align: left; margin-left: 20px; cursor: pointer;" onclick="redirectToIntro()">Dora Tsai</h2>
+            <h2 style="text-align: left; margin-left: 20px; margin: auto 0 auto 20px;" onclick="redirectToIntro()">Dora Tsai</h2>
             <a href="mailto:doratsai@usc.edu" target="_blank" class="icon-link">
                 <img src="img_folder/emaillogo.png" alt="Email" class="footericon">
             </a>
@@ -239,9 +239,6 @@
     </footer>
 
     <script>
-        function redirectToIntro() {
-            window.location.href = 'index.html';
-        }
     </script>
 
 </body>
