--- a/mythoflumi.html
+++ b/mythoflumi.html
@@ -21,7 +21,7 @@
                 <div class="projectlist">
                     <div class="gamepro">
                         <div class="projectimg">
-                            <img src="placeholder.jpg" alt="pc" class="projectpic">
+                            <img src="placeholder2.jpg" alt="pc" class="projectpic">
                         </div>
                         <div class="text-container">
                             <span style="font-weight: 300; font-size: 30px;">Myth of Lumi 2025</span><br>
