--- a/codepros.html
+++ b/codepros.html
@@ -223,7 +223,7 @@
 
     <footer>
         <div style="display: flex;">
-            <h2 style="text-align: left; margin-left: 20px; margin: auto 0 auto 20px;" onclick="redirectToIntro()">Dora Tsai</h2>
+            <h2 style="text-align: left; margin-left: 20px; margin: auto 0 auto 20px;">Dora Tsai</h2>
             <a href="mailto:doratsai@usc.edu" target="_blank" class="icon-link">
                 <img src="img_folder/emaillogo.png" alt="Email" class="footericon">
             </a>
