--- a/littledream.html
+++ b/littledream.html
@@ -68,7 +68,7 @@
                     <br>
                     <div style="display: flex;">
                         <div class="bar" style="background-color: #69cdff; width: 15px"></div>
-                        <button class="nav projectbutton" style="color: #69cdff; font-size: 18px;" onclick="redirectToProjects()">Back</button>
+                        <button class="nav projectbutton" style="color: #69cdff; font-size: 18px;" onclick="redirectToIntro()">Back</button>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
 
     <footer>
         <div style="display: flex;">
-            <h2 style="text-align: left; margin-left: 20px; cursor: pointer;" onclick="redirectToIntro()">Dora Tsai</h2>
+            <h2 style="text-align: left; margin-left: 20px; margin: auto 0 auto 20px;" onclick="redirectToIntro()">Dora Tsai</h2>
             <a href="mailto:doratsai@usc.edu" target="_blank" class="icon-link">
                 <img src="img_folder/emaillogo.png" alt="Email" class="footericon">
             </a>
@@ -106,10 +106,6 @@
     <script>
         function redirectToIntro() {
             window.location.href = 'index.html';
-        }
-
-        function redirectToProjects() {
-            window.location.href = 'projects.html';
         }
 
         var images = [
