--- a/mythoflumi.html
+++ b/mythoflumi.html
@@ -37,7 +37,7 @@
                                 <li>Team size: 35~40</li>
                                 <li>Create concept arts</li>
                                 <li>2D animation for lumi</li>
-                                <li>Rig and animate all characters</li>
+                                <li>Rig and animate most characters</li>
                                 <li>Model, rig, and animate first-person arm</li>
                             </ul><br>
                             <div style="display: flex;">
