--- a/pigandchikin.html
+++ b/pigandchikin.html
@@ -39,8 +39,8 @@
                             </p>
                             <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Team size: 30~35</li>
-                                <li>Develop models for all characters</li>
-                                <li>Establish rigs for all characters</li>
+                                <li>Develop models for most characters</li>
+                                <li>Establish rigs for most characters</li>
                                 <li>Produce most animations for characters</li>
                             </ul><br>
                             <div style="display: flex;">
