--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                     <li>Team size: 35~40</li>
                                     <li>Create concept arts</li>
                                     <li>2D animation for lumi</li>
-                                    <li>Rig and animate all characters</li>
+                                    <li>Rig and animate most characters</li>
                                     <li>Model, rig, and animate first-person arm</li>
                                 </ul><br>
                             </div>
@@ -139,8 +139,8 @@
                                 <button class="tag" style="background-color: #65c2eb">3D Animation</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 30~35</li>
-                                    <li>Develop models for all characters</li>
-                                    <li>Establish rigs for all characters</li>
+                                    <li>Develop models for most characters</li>
+                                    <li>Establish rigs for most characters</li>
                                     <li>Produce most animations for characters</li>
                                 </ul><br>
                             </div>
