--- a/brinkmanship.html
+++ b/brinkmanship.html
@@ -36,12 +36,12 @@
                                  Your parents give you a gun. The ship goes into lockdown. 
                                  What do you do? Who will you trust?
                             </p>
-                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Team size: ~25</li>
                                 <li>Model assets</li>
                                 <li>Model and rig first-person model</li>
                                 <li>Create first-person perspective animations</li>
-                            </ul><br>
+                            </ul><br> -->
                             <div style="display: flex;">
                                 <div class="bar" style="background-color: #69cdff; width: 15px"></div>
                                 <a href="https://store.steampowered.com/app/2858410/Brinkmanship/" target="_blank" rel="noopener noreferrer">
