--- a/codepros.html
+++ b/codepros.html
@@ -39,7 +39,7 @@
             <div class="contents">
                 <div style="display: flex;">
                     <div class="bar" style="background-color: #69cdff;"></div>
-                    <h2>Code</h2>
+                    <h2>Portfolio</h2>
                 </div>
                 <br>
                 <div class="projectlist">
