--- a/littledream.html
+++ b/littledream.html
@@ -39,13 +39,13 @@
                                 engagement. This joint creation beautifully balances individual 
                                 creativity and collective imagination, serving as a reminder of childhood dreams 
                             </p>
-                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Board game</li>
                                 <li>Team size: 1 -> 4 (2.0 ver)</li>
                                 <li>Design and draw art assets</li>
                                 <li>Gameplay design</li>
                                 <li>Conceptualize narrative and settings</li>
-                            </ul><br>
+                            </ul><br> -->
                             <div style="display: flex;">
                                 <div class="bar" style="background-color: #69cdff; width: 15px"></div>
                                 <a href="project/littledream/The Little Dream to the Moon Photo Journal wk9 copy.pdf" target="_blank" rel="noopener noreferrer">
