--- a/pigandchikin.html
+++ b/pigandchikin.html
@@ -37,12 +37,12 @@
                                 changes while exploring themes of resilience, friendship, and overcoming obstacles 
                                 together.
                             </p>
-                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Team size: 30~35</li>
                                 <li>Develop models for most characters</li>
                                 <li>Establish rigs for most characters</li>
                                 <li>Produce most animations for characters</li>
-                            </ul><br>
+                            </ul><br> -->
                             <div style="display: flex;">
                                 <div class="bar" style="background-color: #69cdff; width: 15px"></div>
                                 <a href="https://queburs.itch.io/pig-chikin" target="_blank" rel="noopener noreferrer">
