--- a/shepherds.html
+++ b/shepherds.html
@@ -34,12 +34,12 @@
                                 magic wolf named Kin. Players must cleverly combining their unique 
                                 mastery of musical melodies and distinctive movement styles to solve puzzles.
                             </p>
-                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Team size: 35~40</li>
                                 <li>Create fictional language</li>
                                 <li>UI/UX design</li>
                                 <li>Draw 2D assets</li>
-                            </ul><br>
+                            </ul><br> -->
                             <div style="display: flex;">
                                 <div class="bar" style="background-color: #69cdff; width: 15px"></div>
                                 <a href="https://store.steampowered.com/app/2969240/Shepherds/" target="_blank" rel="noopener noreferrer">
@@ -60,6 +60,7 @@
                         <img src="project/shepherds/dialogue.png" alt="dialogue" class="thumbnail" onclick="openPopup('project/shepherds/dialogue.png')">
                         <img src="project/shepherds/music.jpg" alt="music" class="thumbnail" onclick="openPopup('project/shepherds/music.jpg')">
                         <img src="project/shepherds/language.jpg" alt="language" class="thumbnail" onclick="openPopup('project/shepherds/language.jpg')">
+                        <img src="project/shepherds/uinote.png" alt="language" class="thumbnail" onclick="openPopup('project/shepherds/uinote.png')">
                     </div>
                     <br>
                     <div style="display: flex;">
@@ -114,7 +115,8 @@
             'project/shepherds/slider.jpg',
             'project/shepherds/dialogue.png',
             'project/shepherds/music.jpg',
-            'project/shepherds/language.jpg'
+            'project/shepherds/language.jpg',
+            'project/shepherds/uinote.png'
         ];
 
     var currentIndex = 0;
