--- a/thewindandthewisp.html
+++ b/thewindandthewisp.html
@@ -32,12 +32,12 @@
                             <button class="tag" style="background-color: #a5d19b">Coding</button><br>
                             <p> Coming soon!!!
                             </p>
-                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
-                                <li>Team size: 15~20</li>
+                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                                <li>Team size: 28</li>
                                 <li>Importing animation to engine</li>
                                 <li>Rigged and animate props</li>
                                 <li>Helped team members with rigging and animation debugging</li>
-                            </ul><br>
+                            </ul><br> -->
                             <div style="display: flex;">
                                 <!-- <div class="bar" style="background-color: #69cdff; width: 15px"></div>
                                 <a href="https://queburs.itch.io/pig-chikin" target="_blank" rel="noopener noreferrer">
