--- a/citywitch.html
+++ b/citywitch.html
@@ -42,12 +42,12 @@
                                 reflecting on human distractions. City Witch delivers a captivating blend 
                                 of gameplay and introspective storytelling in a spellbinding urban fantasy. 
                             </p>
-                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>2-person project</li>
                                 <li>Design and draw all art assets</li>
                                 <li>Animation, background, UI, etc.</li>
                                 <li>Conceptualize narrative and settings</li>
-                            </ul><br>
+                            </ul><br> -->
                             <div style="display: flex;">
                                 <div class="bar" style="background-color: #69cdff; width: 15px"></div>
                                 <a href="https://qpc123.itch.io/city-witch" target="_blank" rel="noopener noreferrer">
