--- a/index.html
+++ b/index.html
@@ -84,75 +84,79 @@
             <div class="contents">
                 <div style="display: flex;">
                     <div class="bar" style="background-color: #69cdff;"></div>
-                    <h2>Projects</h2>
+                    <h2>Projects
+                        <button class="tag" style="margin: 0px; background-color: #65c2eb">Technical Artist</button>
+                        <button class="tag" style="margin: 0px; background-color: #0889c9">2D Artist</button>
+                        <button class="tag" style="margin: 0px; background-color: #a5d19b">Programmer</button>
+                    </h2>
                 </div>
                 <br>
                 <div class="projectlist">
                     <div class="proimage" onclick="redirectToThewindandthewisp()">
-                        <img src="placeholder.jpg" alt="thewingandthewisp" class="codepic">
+                        <img src="project/thewindandthewisp/zinnia.gif" alt="thewingandthewisp" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 24px;">The Wind and The Wisp 2025</span><br>
                                 <hr>
-                                <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Animation</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
                                 <button class="tag" style="background-color: #a5d19b">Coding</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 15~20</li>
                                     <li>Importing animation to engine</li>
-                                    <li>Rigged and animate props</li>
-                                    <li>Helped team members with rigging and animation debugging</li>
+                                    <li>Rigged and animate props and characters</li>
+                                    <li>Rigging and animation debugging</li>
                                 </ul><br>
                             </div>
                         </div>
                     </div>
                     <div class="proimage" onclick="redirectToMythoflumi()">
-                        <img src="placeholder.jpg" alt="mythoflumi" class="codepic">
+                        <img src="project/mythoflumi/cardbackdesign.jpg" alt="mythoflumi" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 30px;">Myth of Lumi 2025</span><br>
                                 <hr>
                                 <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Animation</button>
-                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
                                 <button class="tag" style="background-color: #0889c9">2D Art</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
                                 <button class="tag" style="background-color: #0889c9">2D Animation</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 35~40</li>
                                     <li>Create concept arts</li>
                                     <li>2D animation for lumi</li>
-                                    <li>Rig and animate most characters</li>
+                                    <li>Rig and animate characters</li>
                                     <li>Model, rig, and animate first-person arm</li>
                                 </ul><br>
                             </div>
                         </div>
                     </div>
                     <div class="proimage" onclick="redirectToPigandchikin()">
-                        <img src="project/pigandchikin/pccov.jpg" alt="pig&chikin" class="codepic">
+                        <img src="project/pigandchikin/PCwalking.gif" alt="pig&chikin" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 30px;">Pig & Chikin 2024</span><br>
                                 <hr>
-                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button>
+                                <button class="tag" style="background-color: #65c2eb">3D Animation</button>
                                 <button class="tag" style="background-color: #65c2eb">3D Rigging</button>
-                                <button class="tag" style="background-color: #65c2eb">3D Animation</button><br>
+                                <button class="tag" style="background-color: #65c2eb">3D Modeling</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 30~35</li>
-                                    <li>Develop models for most characters</li>
-                                    <li>Establish rigs for most characters</li>
-                                    <li>Produce most animations for characters</li>
+                                    <li>Develop low-poly character models</li>
+                                    <li>Establish rigs for characters</li>
+                                    <li>Produce animations for characters</li>
                                 </ul><br>
                             </div>
                         </div>
                     </div>
                     <div class="proimage" onclick="redirectToShepherds()">
-                        <img src="project/shepherds/shepherdscov.jpg" alt="Shepherds" class="codepic">
+                        <img src="project/shepherds/language.jpg" alt="Shepherds" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 30px;">Shepherds 2024</span><br>
                                 <hr>
-                                <button class="tag" style="background-color: #c8e2b8">UI Design</button>
+                                <button class="tag" style="background-color: #0889c9">UI Design</button>
                                 <button class="tag" style="background-color: #0889c9">2D Art</button><br>
                                 <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                     <li>Team size: 35~40</li>
@@ -164,7 +168,7 @@
                         </div>
                     </div>
                     <div class="proimage" onclick="directToBrinkmanship()">
-                        <img src="project/brinkmanship/brinkmanshipcover.png" alt="Brinkmanship" class="codepic">
+                        <img src="project/brinkmanship/chair.jpg" alt="Brinkmanship" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 28px;">Brinkmanship 2024</span><br>
@@ -182,7 +186,7 @@
                         </div>
                     </div>
                     <div class="proimage" onclick="directToCitywitch()">
-                        <img src="project/citywitch/Title_Page.jpg" alt="citywitch" class="codepic">
+                        <img src="project/citywitch/remi.jpg" alt="citywitch" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 30px;">City Witch 2023</span><br>
@@ -202,7 +206,7 @@
                         </div>
                     </div>
                     <div class="proimage" onclick="directToLittledream()">
-                        <img src="project/littledream/New_Cover.jpg" alt="littledream" class="codepic">
+                        <img src="project/littledream/boardgame.png" alt="littledream" class="codepic">
                         <div class="overlay1">
                             <div class="textc">
                                 <span style="font-weight: 300; font-size: 30px;">Little Dream 2022</span><br>
