--- a/mythoflumi.html
+++ b/mythoflumi.html
@@ -33,13 +33,13 @@
                                 <button class="tag" style="background-color: #0889c9">2D Animation</button><br>
                             <p> Coming soon!!!
                             </p>
-                            <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
+                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
                                 <li>Team size: 35~40</li>
                                 <li>Create concept arts</li>
                                 <li>2D animation for lumi</li>
                                 <li>Rig and animate most characters</li>
                                 <li>Model, rig, and animate first-person arm</li>
-                            </ul><br>
+                            </ul><br> -->
                             <div style="display: flex;">
                                 <!-- <div class="bar" style="background-color: #69cdff; width: 15px"></div>
                                 <a href="https://queburs.itch.io/pig-chikin" target="_blank" rel="noopener noreferrer">
