[fixed] merge conflict

--- a/citywitch.html
+++ b/citywitch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dora Tsai - Portfolio</title>
+    <link rel="icon" href="logo.png" type="image/x-icon">
     <style>
         body {
             font-family: "Libre Franklin",
@@ -278,7 +279,6 @@ button.tag {
     </style>
 </head>
 <body>
-<<<<<<< HEAD
     <div class="background"></div>
     <header>
         <h1>Dora Tsai</h1>
@@ -286,83 +286,6 @@ button.tag {
             <div style="display: flex;">
                 <div class="bar" style="background-color: #aad5ee;"></div>
                 <button class="nav firsttbutton" style="color: #aad5ee;" onclick="redirectToHome()">Home</button>
-=======
-    <main>
-        <section id="projectpage" class="page">
-            <div class="contents">
-                <div style="display: flex;">
-                    <div class="bar" style="background-color: #69cdff;"></div>
-                    <h2>City Witch</h2>
-                </div>
-                <br>
-                <div class="projectlist">
-                    <div class="gamepro">
-                        <div class="projectimg">
-                            <video width="640" height="360" autoplay controls>
-                                <source src="project/citywitch/CityWichTrailer.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                        </div>
-                        <div class="text-container">
-                            <span style="font-weight: 300; font-size: 30px;">City Witch 2023</span><br>
-                            <hr>
-                            <button class="tag" style="background-color: #94bcd2">Director</button>
-                            <button class="tag" style="background-color: #0b5d85">Lead Artist</button>
-                            <button class="tag" style="background-color: #0889c9">2D Art</button>
-                            <button class="tag" style="background-color: #0889c9">2D Animation</button>
-                            <button class="tag" style="background-color: #5b9abc">Narrative</button><br>
-                            <p>Embark on a magical journey in City Witch, a turn-based RPG where 
-                                players guide Remi, a young witch defending her city from disaster monsters. 
-                                Inherited from her retiring grandmother, the duty unfolds through a 
-                                narrative-rich, linear story. Engage in strategic battles with mini-games 
-                                triggering powerful attacks, exploring the origins of monsters and 
-                                reflecting on human distractions. City Witch delivers a captivating blend 
-                                of gameplay and introspective storytelling in a spellbinding urban fantasy. 
-                            </p>
-                            <!-- <ul style="font-weight: bold; padding-left: 5%; font-size: 13px;">
-                                <li>2-person project</li>
-                                <li>Design and draw all art assets</li>
-                                <li>Animation, background, UI, etc.</li>
-                                <li>Conceptualize narrative and settings</li>
-                            </ul><br> -->
-                            <div style="display: flex;">
-                                <div class="bar" style="background-color: #69cdff; width: 15px"></div>
-                                <a href="https://qpc123.itch.io/city-witch" target="_blank" rel="noopener noreferrer">
-                                    <button class="nav projectbutton" style="color: #69cdff; font-size: 18px;">Play</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="artlist">
-                        <img src="project/citywitch/remi.jpg" alt="remi" class="thumbnail" onclick="openPopup('project/citywitch/remi.jpg')">
-                        <img src="project/citywitch/erin.jpg" alt="erin" class="thumbnail" onclick="openPopup('project/citywitch/erin.jpg')">
-                        <img src="project/citywitch/sasha.jpg" alt="sasha" class="thumbnail" onclick="openPopup('project/citywitch/sasha.jpg')">
-                        <img src="project/citywitch/monster.jpg" alt="monsters" class="thumbnail" onclick="openPopup('project/citywitch/monster.jpg')">
-                        <img src="project/citywitch/endscene1.jpg" alt="end1" class="thumbnail" onclick="openPopup('project/citywitch/endscene1.jpg')">
-                        <img src="project/citywitch/endscene2.jpg" alt="end2" class="thumbnail" onclick="openPopup('project/citywitch/endscene2.jpg')">
-                        <img src="project/citywitch/endscene3.jpg" alt="end3" class="thumbnail" onclick="openPopup('project/citywitch/endscene3.jpg')">
-                        <img src="project/citywitch/finalscene.jpg" alt="fin" class="thumbnail" onclick="openPopup('project/citywitch/finalscene.jpg')">
-                        <img src="project/citywitch/ui.png" alt="ui" class="thumbnail" onclick="openPopup('project/citywitch/ui.png')">
-                        <img src="project/citywitch/buttons.png" alt="buttons" class="thumbnail" onclick="openPopup('project/citywitch/buttons.png')">
-                        <img src="project/citywitch/hatlogo.png" alt="hatlogo" class="thumbnail" onclick="openPopup('project/citywitch/hatlogo.png')">
-                        <img src="project/citywitch/remigame.png" alt="remigame" class="thumbnail" onclick="openPopup('project/citywitch/remigame.png')">
-                        <img src="project/citywitch/eringame.png" alt="eringame" class="thumbnail" onclick="openPopup('project/citywitch/eringame.png')">
-                        <img src="project/citywitch/sashagame.png" alt="sashagame" class="thumbnail" onclick="openPopup('project/citywitch/sashagame.png')">
-                        <img src="project/citywitch/firework.gif" alt="firework" class="thumbnail" onclick="openPopup('project/citywitch/firework.gif')">
-                        <img src="project/citywitch/bloom.gif" alt="bloom" class="thumbnail" onclick="openPopup('project/citywitch/bloom.gif')">
-                        <img src="project/citywitch/wave.gif" alt="wave" class="thumbnail" onclick="openPopup('project/citywitch/wave.gif')">
-                        <img src="project/citywitch/crane.gif" alt="crane" class="thumbnail" onclick="openPopup('project/citywitch/crane.gif')">
-                        <img src="project/citywitch/plant.gif" alt="plant" class="thumbnail" onclick="openPopup('project/citywitch/plant.gif')">
-                        <img src="project/citywitch/drop.gif" alt="drop" class="thumbnail" onclick="openPopup('project/citywitch/drop.gif')">
-                        <img src="project/citywitch/smoke.gif" alt="smoke" class="thumbnail" onclick="openPopup('project/citywitch/smoke.gif')">
-                    </div>
-                    <br>
-                    <div style="display: flex;">
-                        <div class="bar" style="background-color: #69cdff; width: 15px"></div>
-                        <button class="nav projectbutton" style="color: #69cdff; font-size: 18px;" onclick="redirectToIntro()">Back</button>
-                    </div>
-                </div>
->>>>>>> 9270ac3ab7aa7f9796fc3bd336fba34315bd649e
             </div>
             <div style="display: flex;">
                 <div class="bar" style="background-color: #7cc0e7;"></div>
@@ -380,7 +303,6 @@ button.tag {
     </header>
     <hr style="height: 8px; background-color: #a9d5ee; border: none; padding-top: 0px; margin: 0;">
 
-<<<<<<< HEAD
     <h2 style="margin-bottom: 5px;">City Witch</h2>
     <button class="tag" style="background-color: #94bcd2">Director</button>
     <button class="tag" style="background-color: #0b5d85">Lead Artist</button>
@@ -404,22 +326,6 @@ button.tag {
                     </a>
                 </div>
             </div>
-=======
-    <footer>
-        <div style="display: flex;">
-            <h2 style="text-align: left; margin-left: 20px; margin: auto 0 auto 20px;" onclick="redirectToIntro()">Dora Tsai</h2>
-            <a href="mailto:doratsai@usc.edu" target="_blank" class="icon-link">
-                <img src="img_folder/emaillogo.png" alt="Email" class="footericon">
-            </a>
-        
-            <a href="https://linkedin.com/in/fangtungtsai" target="_blank" class="icon-link">
-                <img src="img_folder/linkedinlogo.png" alt="LinkedIn" class="footericon">
-            </a>
-        
-            <a href="https://github.com/doratsai1020" target="_blank" class="icon-link">
-                <img src="img_folder/githublogo.png" alt="GitHub" class="footericon">
-            </a>
->>>>>>> 9270ac3ab7aa7f9796fc3bd336fba34315bd649e
         </div>
         <h3>Character designs:</h3>
         <div>
@@ -474,7 +380,6 @@ button.tag {
             window.location.href = 'index.html';
         }
 
-<<<<<<< HEAD
         function redirectToProjects() {
             window.location.href = 'projects.html';
         }
@@ -487,8 +392,6 @@ button.tag {
             window.location.href = 'contacts.html'
         }
 
-=======
->>>>>>> 9270ac3ab7aa7f9796fc3bd336fba34315bd649e
         var images = [
             'art/citywitch/remi.jpg',
             'art/citywitch/sasha.jpg',
