[added] rose model

--- a/art.html
+++ b/art.html
@@ -369,6 +369,10 @@ h2 {
             <h2>3D Art</h2>
         </div>
         <div class="gallery-grid">
+            <div class="gallery-item" onclick="openPopup('art/rose.png')">
+                <img src="art/rose.png" alt="Game Art 2">
+                <div class="gallery-overlay">Rose Model <br>– Drift</div>
+            </div>
             <div class="gallery-item" onclick="openPopup('art/chair.jpg')">
                 <img src="art/chair.jpg" alt="Game Art 1">
                 <div class="gallery-overlay">Chair Model <br>– Brinkmanship</div>
@@ -428,6 +432,7 @@ h2 {
         }
 
         var images = [
+            'art/rose.png',
             'art/chair.jpg',
             'art/cardbackdesign.jpg',
             'art/language.jpg',
