--- a/littledream.html
+++ b/littledream.html
@@ -328,16 +328,16 @@ button.tag {
         </div>
         <h3>Concept art and assets:</h3>
         <div>
-            <img src="art/littledream/rules.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
+            <img src="art/littledream/rules.jpg" class="thumbnail" onclick="openPopup('art/littledream/rules.jpg')">
         </div>
         <div>
-            <img src="art/littledream/characterback.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
-            <img src="art/littledream/charactercard.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
-            <img src="art/littledream/functioncard.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
-            <img src="art/littledream/Gainmaterial.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
-            <img src="art/littledream/Reportcard.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
-            <img src="art/littledream/Breakingcard.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
-            <img src="art/littledream/rocket.jpg" class="thumbnail" onclick="openPopup('art/citywitch/sasha.jpg')">
+            <img src="art/littledream/characterback.jpg" class="thumbnail" onclick="openPopup('art/littledream/characterback.jpg')">
+            <img src="art/littledream/charactercard.jpg" class="thumbnail" onclick="openPopup('art/littledream/charactercard.jpg')">
+            <img src="art/littledream/functioncard.jpg" class="thumbnail" onclick="openPopup('art/littledream/functioncard.jpg')">
+            <img src="art/littledream/Gainmaterial.jpg" class="thumbnail" onclick="openPopup('art/littledream/Gainmaterial.jpg')">
+            <img src="art/littledream/Reportcard.jpg" class="thumbnail" onclick="openPopup('art/littledream/Reportcard.jpg')">
+            <img src="art/littledream/Breakingcard.jpg" class="thumbnail" onclick="openPopup('art/littledream/Breakingcard.jpg')">
+            <img src="art/littledream/rocket.jpg" class="thumbnail" onclick="openPopup('art/littledream/rocket.jpg')">
         </div>
     </div>
     <br><br><br><br><br><br>
@@ -372,7 +372,14 @@ button.tag {
         }
 
         var images = [
-            'art/citywitch/remi.jpg',
+            'art/littledream/rules.jpg',
+            'art/littledream/characterback.jpg',
+            'art/littledream/charactercard.jpg',
+            'art/littledream/functioncard.jpg',
+            'art/littledream/Gainmaterial.jpg',
+            'art/littledream/Reportcard.jpg',
+            'art/littledream/Breakingcard.jpg',
+            'art/littledream/rocket.jpg'
         ];
 
         var currentIndex = 0;
